test/libsolidity/syntaxTests/literalSuffixes/parameters/overloading_decimal_vs_decimal_ambiguous_size.sol
function uSuffix(uint8, uint) pure returns (uint) {}
function uSuffix(uint16, uint) pure returns (uint) {}

contract C {
    uint a = 1.27 uSuffix;
}
// ----
// DeclarationError 7920: (139-146): Identifier not found or not unique.
